WeeChat - Wee Enhanced Environment for Chat
===========================================

ChangeLog - 2005-07-19


Version 0.1.4 (under dev!):
   * added "irc_highlight" setting, to get highlight with any word
   * fixed auto-rejoin for channels with key
   * fixed /ctcp command (now any command/data allowed)
   * added /amsg command (send text to all channels of all connected servers)
   * fixed SIGSEGV handler (now write a core file by aborting program)
   * fixed statusbar & infobar background refresh problem with some systems
   * added color for private in hotlist (different than color for highlight)
   * added DCC resume and timeout
   * added function for Perl/Python to get DCC list
   * fixed FIFO pipe (command now authorized on a buffer not connected
     to an IRC server)
   * topic completion now decodes UTF-8 string
   * fixed bug with IRC URL on command line (irc://)
   * new keyboard management: keys are setup in config file, new command
     /key was added and some new default keys were added, alt-k key is
     used to grab key (useful for /key command)
   * added seconds in infobar time (optional thanks to new setting)
   * fixed some curses refreshs
   * channels auto-prefixed by "#" (if no prefix found) for /join command

Version 0.1.3 (2005-07-02):
   * proxy support (http, socks4, socks5) with authentification (http, socks5)
     and ipv6 support (client to proxy)
   * completion added for config option (with /set command)
   * commands from users outside channel now authorized (if special user or
     channel without "n" flag)
   * added IPv6 support
   * kill command now received and displayed
   * added SSL support
   * channel notify levels are saved in config file (new option
     "server_notify_levels" for server sections)
   * part message now accepts %v (replaced by WeeChat version), like quit message
   * errors while loading perl scripts are now displayed in server buffer
     (instead of current buffer)