@@ -26,52 +26,54 @@
 
 #define INPUT_BUFFER_BLOCK_SIZE 256
 
-#define NUM_COLORS                      52
+#define NUM_COLORS                      54
 #define COLOR_WIN_TITLE                 1
 #define COLOR_WIN_CHAT                  2
 #define COLOR_WIN_CHAT_TIME             3
 #define COLOR_WIN_CHAT_TIME_SEP         4
 #define COLOR_WIN_CHAT_PREFIX1          5
 #define COLOR_WIN_CHAT_PREFIX2          6
-#define COLOR_WIN_CHAT_NICK             7
-#define COLOR_WIN_CHAT_HOST             8
-#define COLOR_WIN_CHAT_CHANNEL          9
-#define COLOR_WIN_CHAT_DARK             10
-#define COLOR_WIN_CHAT_HIGHLIGHT        11
-#define COLOR_WIN_STATUS                12
-#define COLOR_WIN_STATUS_DELIMITERS     13
-#define COLOR_WIN_STATUS_DATA_MSG       14
-#define COLOR_WIN_STATUS_DATA_PRIVATE   15
-#define COLOR_WIN_STATUS_DATA_HIGHLIGHT 16
-#define COLOR_WIN_STATUS_DATA_OTHER     17
-#define COLOR_WIN_STATUS_MORE           18
-#define COLOR_WIN_INFOBAR               19
-#define COLOR_WIN_INFOBAR_DELIMITERS    20
-#define COLOR_WIN_INFOBAR_HIGHLIGHT     21
-#define COLOR_WIN_INPUT                 22
-#define COLOR_WIN_INPUT_CHANNEL         23
-#define COLOR_WIN_INPUT_NICK            24
-#define COLOR_WIN_NICK                  25
-#define COLOR_WIN_NICK_AWAY             26
-#define COLOR_WIN_NICK_CHANOWNER        27
-#define COLOR_WIN_NICK_CHANADMIN        28
-#define COLOR_WIN_NICK_OP               29
-#define COLOR_WIN_NICK_HALFOP           30
-#define COLOR_WIN_NICK_VOICE            31
-#define COLOR_WIN_NICK_MORE             32
-#define COLOR_WIN_NICK_SEP              33
-#define COLOR_WIN_NICK_SELF             34
-#define COLOR_WIN_NICK_PRIVATE          35
-#define COLOR_WIN_NICK_FIRST            36
-#define COLOR_WIN_NICK_LAST             45
+#define COLOR_WIN_CHAT_JOIN             7
+#define COLOR_WIN_CHAT_PART             8
+#define COLOR_WIN_CHAT_NICK             9
+#define COLOR_WIN_CHAT_HOST             10
+#define COLOR_WIN_CHAT_CHANNEL          11
+#define COLOR_WIN_CHAT_DARK             12
+#define COLOR_WIN_CHAT_HIGHLIGHT        13
+#define COLOR_WIN_STATUS                14
+#define COLOR_WIN_STATUS_DELIMITERS     15
+#define COLOR_WIN_STATUS_DATA_MSG       16
+#define COLOR_WIN_STATUS_DATA_PRIVATE   17
+#define COLOR_WIN_STATUS_DATA_HIGHLIGHT 18
+#define COLOR_WIN_STATUS_DATA_OTHER     19
+#define COLOR_WIN_STATUS_MORE           20
+#define COLOR_WIN_INFOBAR               21
+#define COLOR_WIN_INFOBAR_DELIMITERS    22
+#define COLOR_WIN_INFOBAR_HIGHLIGHT     23
+#define COLOR_WIN_INPUT                 24
+#define COLOR_WIN_INPUT_CHANNEL         25
+#define COLOR_WIN_INPUT_NICK            26
+#define COLOR_WIN_NICK                  27
+#define COLOR_WIN_NICK_AWAY             28
+#define COLOR_WIN_NICK_CHANOWNER        29
+#define COLOR_WIN_NICK_CHANADMIN        30
+#define COLOR_WIN_NICK_OP               31
+#define COLOR_WIN_NICK_HALFOP           32
+#define COLOR_WIN_NICK_VOICE            33
+#define COLOR_WIN_NICK_MORE             34
+#define COLOR_WIN_NICK_SEP              35
+#define COLOR_WIN_NICK_SELF             36
+#define COLOR_WIN_NICK_PRIVATE          37
+#define COLOR_WIN_NICK_FIRST            38
+#define COLOR_WIN_NICK_LAST             47
 #define COLOR_WIN_NICK_NUMBER           (COLOR_WIN_NICK_LAST - COLOR_WIN_NICK_FIRST + 1)
-#define COLOR_DCC_SELECTED              46
-#define COLOR_DCC_WAITING               47
-#define COLOR_DCC_CONNECTING            48
-#define COLOR_DCC_ACTIVE                49
-#define COLOR_DCC_DONE                  50
-#define COLOR_DCC_FAILED                51
-#define COLOR_DCC_ABORTED               52
+#define COLOR_DCC_SELECTED              48
+#define COLOR_DCC_WAITING               49
+#define COLOR_DCC_CONNECTING            50
+#define COLOR_DCC_ACTIVE                51
+#define COLOR_DCC_DONE                  52
+#define COLOR_DCC_FAILED                53
+#define COLOR_DCC_ABORTED               54
 
 #define SERVER(buffer)  ((t_irc_server *)(buffer->server))
 #define CHANNEL(buffer) ((t_irc_channel *)(buffer->channel))
