@@ -1,10 +1,11 @@
 WeeChat - Wee Enhanced Environment for Chat
 ===========================================
 
-ChangeLog - 2005-07-19
+ChangeLog - 2005-07-22
 
 
 Version 0.1.4 (under dev!):
+   * join and part/quit prefixes (arrows) now displayed with different colors
    * added "irc_highlight" setting, to get highlight with any word
    * fixed auto-rejoin for channels with key
    * fixed /ctcp command (now any command/data allowed)
